syntax = "proto3";

package token_position;
option go_package = "./api";

message TokenPosition {
  string tokenAddress = 1;
  string symbol = 2;
  bytes balance = 3;
  int32 decimals = 4;
}


message GetTokenPositionRequest {
  string tokenAddress = 1;
}
message GetTokenPositionResponse {
	TokenPosition tokenPosition = 1;
}

message GetTokenPositionsRequest {
  string tokenAddress = 1;
}
message GetTokenPositionsResponse {
	repeated TokenPosition tokenPositions = 1;
}


service PositionService 
{
    rpc GetTokenPositions(GetTokenPositionsRequest) returns (GetTokenPositionsResponse) {};
    rpc GetTokenPosition(GetTokenPositionRequest) returns (GetTokenPositionResponse) {};
}